<resources>
    <string name="app_name" translatable="false">Journal Tracker</string>
    <string name="campus_name">Name</string>
    <string name="campus_add">Add</string>
    <string name="edit_lesspon_name">Name</string>
    <string name="edit_lesson_teacher">Teacher</string>
    <string name="edit_lesson_cabinet">Cabinet</string>
    <string name="edit_lesson_campus">Campus</string>
    <string name="edit_lesson_order">Lesson order</string>
    <string name="edit_lesson_type">Lesson type</string>
    <string name="edit_lesson_apply">Apply</string>
    <string name="edit_semester_date_start">Start date</string>
    <string name="edit_semester_date_end">End date</string>
    <string name="edit_semester_add">Add</string>
    <string name="edit_students_add">Add student</string>
    <string name="edit_times_start">Start time</string>
    <string name="edit_times_end">End time</string>
    <string name="edit_times_add">Add</string>
    <string name="export_tab_week">Week</string>
    <string name="export_tab_semester">Semester</string>
    <string name="export_block_excel" translatable="false">Excel</string>
    <string name="export_share_excel">Share Excel</string>
    <string name="export_save_excel">Save Excel</string>
    <string name="export_open_excel">Open Excel</string>
    <string name="export_block_png" translatable="false">PNG</string>
    <string name="export_share_png">Share PNG</string>
    <string name="export_save_png">Save PNG</string>
    <string name="export_open_png">Open PNG</string>
    <string name="students_lesson_name" translatable="false">%1$d. %2$s (%3$s)</string>
    <string name="students_lesson_date" translatable="false">%1$02d.%2$02d.%3$02d</string>
    <string name="students_lesson_teacher" translatable="false">%s</string>
    <string name="schedule_week">%1$d week (%2$s)</string>
    <string name="schedule_week_single">%1$d week</string>
    <string name="schedule_semester">%1$s semester</string>
    <string name="schedule_select_week">Select week</string>
    <string name="schedule_current_date">Today</string>
    <string name="settings_group_name">Group name</string>
    <string name="settings_weeks_types_title">Week types</string>
    <string name="settings_weeks_format">Week type format</string>
    <string name="settings_attendance_format">Attedance format</string>
    <string name="settings_edit_timetable">Edit timetable</string>
    <string name="settings_edit_campuses">Edit campuses</string>
    <string name="settings_edit_students">Edit students</string>
    <string name="item_campus_order" translatable="false">%1$d</string>
    <string name="item_campus_codename" translatable="false">%1$s</string>
    <string name="item_campus_name" translatable="false">%1$s</string>
    <string name="item_date_weekday" translatable="false">%1$s</string>
    <string name="item_date_date" translatable="false">%1$d</string>
    <string name="item_date_month" translatable="false">%1$s</string>
    <string name="item_lesson_order" translatable="false">%1$d.</string>
    <string name="item_lesson_times" translatable="false">%1$02d:%2$02d - %3$02d:%4$02d</string>
    <string name="item_lesson_cabinet">Cab.: %1$d (%2$s)</string>
    <string name="item_lesson_name" translatable="false">%1$s (%2$s)</string>
    <string name="item_lesson_teacher" translatable="false">%1$s</string>
    <string name="item_semester_order" translatable="false">%1$d.</string>
    <string name="item_semester_dates" translatable="false">%1$02d.%2$02d.%3$02d - %4$02d.%5$02d.%6$02d</string>
    <string name="item_student_order" translatable="false">%1$d.</string>
    <string name="item_student_name" translatable="false">%1$s</string>
    <string name="item_edit_student_order" translatable="false">%1$d.</string>
    <string name="item_edit_student_name" translatable="false">%1$s</string>
    <string name="item_edit_time_order" translatable="false">%1$d.</string>
    <string name="item_edit_time" translatable="false">%1$02d:%2$02d - %3$02d:%4$02d</string>
    <string name="item_week_order" translatable="false">%1$02d.</string>
    <string name="item_week_dates" translatable="false">%1$02d.%2$02d.%3$02d - %4$02d.%5$02d.%6$02d</string>
    <string name="campus_codename">Codename</string>
    <string name="export_tab_day">Day</string>
    <string name="bar_item_schedule">Schedule</string>
    <string name="bar_item_export">Export</string>
    <string name="bar_item_settings">Settings</string>
    <string name="export_day">Export day</string>
    <string name="export_week">Export week</string>
    <string name="export_semester">Export semester</string>
    <string name="settings_weeks_types" translatable="false">%1$d</string>
    <string name="week_format_type_even_uneven">Even / Uneven</string>
    <string name="week_format_type_up_down">Up / Down</string>
    <string name="attendance_format_type_plus_minus" translatable="false">+ / -</string>
    <string name="attendance_format_type_skip_hours" translatable="false">• / 2</string>
    <string name="week_type_even">Even</string>
    <string name="week_type_uneven">Uneven</string>
    <string name="week_type_up">Up</string>
    <string name="week_type_down">Down</string>
    <string name="day_monday">MON</string>
    <string name="day_tuesday">TUE</string>
    <string name="day_wednesday">WED</string>
    <string name="day_thurday">THU</string>
    <string name="day_friday">FRI</string>
    <string name="day_saturday">SAT</string>
    <string name="day_sunday">SUN</string>
    <string name="month_january">JAN</string>
    <string name="month_february">FEB</string>
    <string name="month_march">MAR</string>
    <string name="month_april">APR</string>
    <string name="month_may">MAY</string>
    <string name="month_june">JUN</string>
    <string name="month_july">JUL</string>
    <string name="month_august">AUG</string>
    <string name="month_september">SEP</string>
    <string name="month_october">OCT</string>
    <string name="month_november">NOV</string>
    <string name="month_december">DEC</string>
    <string name="schedule_select_semester">Select semester</string>
    <string name="week_format_type_down_up">Down / Up</string>
    <string name="notification_title_tools">Notification title</string>
    <string name="notification_content_tools">Notification content</string>
    <string name="notification_title" translatable="false">%1$s</string>
    <string name="notification_content" translatable="false">%1$s</string>
    <string name="dialog_update_reject">Do not update</string>
    <string name="dialog_update_accept_all">Update all</string>
    <string name="dialog_update_content">All subsequent pairs on that day and time will be processed as well.\nIf there are conflicts, the data will be replaced with new ones.</string>
    <string name="dialog_update_title">Apply for subsequent ones?</string>
    <string name="type_lecture_short">L</string>
    <string name="type_practise_short">P</string>
    <string name="type_laboratory_short">LW</string>
    <string name="type_test_short">T</string>
    <string name="type_test_differential_short">TD</string>
    <string name="type_exam_short">E</string>
    <string name="type_lecture">Lecture</string>
    <string name="type_practise">Practise</string>
    <string name="type_laboratory">Laboratory Work</string>
    <string name="type_test">Test</string>
    <string name="type_test_differential">Test Differential</string>
    <string name="type_exam">Exam</string>
    <string name="attendance_visit" translatable="false">+</string>
    <string name="attendance_skip" translatable="false">—</string>
    <string name="attendance_sick">S</string>
    <string name="attendance_sick_with_certificate">S/R</string>
    <string name="attendance_respectfull_pass">-/R</string>
    <string name="skip_reason">Skip reason</string>
    <string name="empty" translatable="false"> </string>
    <string name="day_before">Day before</string>
    <string name="day_next">Day next</string>
    <string name="dialog_delete_title" >Delete confirm</string>
    <string name="dialog_delete_content" >When deleted, all related data will also be deleted.</string>
    <string name="dialog_delete_cancel" >Cancel</string>
    <string name="dialog_delete_accept" >Accept</string>
    <string name="semester_dialog">Select semester dates</string>
    <string name="semester_dialog_add">Add semester</string>
    <string name="button_delete">Delete</string>
    <string name="save_db">Save DB</string>
    <string name="load_db">Load DB</string>
    <string name="export_filename">Journal_export_%1$02d_%2$02d_%3$02d_%4$02d_%5$02d.jtdump</string>
    <string name="db_saved">DB file saved</string>
    <string name="db_save_error">Save error %1$s</string>
    <string name="db_import_success">DB imported</string>
    <string name="db_import_error">DB import error %1$s</string>
    <string name="db_import_error_incorrect_type">Unknown file type</string>
    <string name="student_default_attendance">Default</string>
    <string name="add_semester_requirement">Add at least 1 semester</string>
    <string name="add_time_requirement">Add at least 1 time</string>
    <string name="add_student_requirement">Add at least 1 student</string>
    <string name="no_lessons">There are no classes</string>
    <string name="add_campus_requirement">Add at least 1 campus</string>
    <string name="exporter_num" translatable="false">№</string>
    <string name="exporter_name">Student</string>
    <string name="exporter_group">Group %1$s</string>
    <string name="exporter_date" translatable="false">%1$02d.%2$02d.%3$02d (%4$s)</string>
    <string name="exporter_week" translatable="false">%1$02d.%2$02d.%3$02d - %4$02d.%5$02d.%6$02d</string>
    <string name="exporter_week_id">%1$02d week</string>
    <string name="exporter_sem_id">%1$02d semester</string>
    <string name="exporter_hour_skipped">Skipped Hours</string>
    <string name="exporter_hour_skipped_respectful">Respectful</string>
    <string name="exporter_hour_skipped_disrespectful">Disrespectful</string>
    <string name="export_filename_excel">Journal %1$02d-%2$02d-%3$02d %4$02d-%5$02d-%6$02d.xlsx</string>
    <string name="share_via">Share with</string>
    <string name="export_collecting_week">Collecting week %1$d</string>
    <string name="export_collecting_date">Collecting date %1$02d.%2$02d.%3$02d</string>
    <string name="export_collecting_data">Collecting data</string>
    <string name="export_processing_file">Processing file</string>
    <string name="dialog_update_app_cancel">Ignore</string>
    <string name="dialog_update_app_accept">Open</string>
    <string name="dialog_update_app_title">New version available</string>
    <string name="dialog_update_app_content">The %1$s version is available. Open the download page?</string>
    <string name="exporter_id">Database ID</string>
    <string name="exporter_overview">Overview</string>
    <string name="importing_sheet">Importing sheet %1$d / %2$d</string>
    <string name="import_table">Import XLXS</string>
    <string name="time_name" translatable="false">%1$d (%2$02d:%3$02d - %4$02d:%5$02d)</string>
    <string name="lesson_shortest_list">Shortest list</string>
    <string name="lesson_visited_list">Visited list</string>
    <string name="lesson_unvisited_list">Unvisited list</string>
    <string name="lesson_edit">Edit lesson</string>
    <string name="lesson_delete">Delete lesson</string>
    <string name="lesson_select_all">Select all</string>
    <string name="lesson_deselect_all">Deselect all</string>
    <string name="single_sheet">Single sheet</string>
</resources>
