<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/export_week"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/excel_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/export_block_excel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_excel"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/export_share_excel"
        app:icon="@drawable/baseline_share_24"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/excel_block" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_excel"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/export_save_excel"
        app:icon="@drawable/baseline_save_24"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_excel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_excel"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/export_open_excel"
        app:icon="@drawable/baseline_open_in_browser_24"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_excel" />

    <TextView
        android:id="@+id/png_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/export_block_png"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_excel" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_png"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/export_share_png"
        app:icon="@drawable/baseline_share_24"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/png_block" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_png"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/export_save_png"
        app:icon="@drawable/baseline_save_24"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_png" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_png"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/export_open_png"
        app:icon="@drawable/baseline_open_in_browser_24"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_png" />

</androidx.constraintlayout.widget.ConstraintLayout>