<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/item_background">

    <TextView
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/item_campus_order"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/codename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:text="@string/item_campus_codename"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/order"
        app:layout_constraintStart_toEndOf="@id/order" />

    <TextView
        android:id="@+id/dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_campus_name"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/codename"
        app:layout_constraintStart_toStartOf="@id/order" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="13dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_delete"
        app:icon="@drawable/baseline_close_24"
        style="?attr/materialIconButtonStyle"
        android:insetRight="0dp"
        android:insetLeft="0dp"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:iconPadding="0dp"
        android:button="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

